--- a/.github/workflows/firebase-distribute.yml
+++ b/.github/workflows/firebase-distribute.yml
@@ -29,6 +29,7 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.FIREBASE_APP_ID }}
-          token: ${{ secrets.FIREBASE_TOKEN }}
-          groups: teo.kotai@yahoo.com, joannaioana9@gmail.com
+          serviceCredentialsFileContent: ${{ secrets.FIREBASE_CREDENTIALS_FILE }}
+          groups: testers
           file: build/app/outputs/flutter-apk/app-release.apk
+
